src/test/ui/generics/issue-65285-incorrect-explicit-lifetime-name-needed.stderr
error[E0637]: `&` without an explicit lifetime name cannot be used here
  --> $DIR/issue-65285-incorrect-explicit-lifetime-name-needed.rs:5:37
   |
LL | fn should_error<T>() where T : Into<&u32> {}
   |                                     ^ explicit lifetime name needed here

error[E0106]: missing lifetime specifier
  --> $DIR/issue-65285-incorrect-explicit-lifetime-name-needed.rs:9:20
   |
LL |     fn foo<'b, L: X<&'b Nested<K>>>();
   |                    ^ expected named lifetime parameter
   |
note: these named lifetimes are available to use
  --> $DIR/issue-65285-incorrect-explicit-lifetime-name-needed.rs:8:9
   |
LL | trait X<'a, K: 'a> {
   |         ^^
LL |     fn foo<'b, L: X<&'b Nested<K>>>();
   |            ^^
help: consider using one of the available lifetimes here
   |
LL |     fn foo<'b, L: X<'lifetime, &'b Nested<K>>>();
   |                     ++++++++++

error[E0106]: missing lifetime specifier
  --> $DIR/issue-65285-incorrect-explicit-lifetime-name-needed.rs:14:16
   |
LL | fn bar<'b, L: X<&'b Nested<i32>>>(){}
   |                ^ expected named lifetime parameter
   |
help: consider using the `'b` lifetime
   |
LL | fn bar<'b, L: X<'b, &'b Nested<i32>>>(){}
   |                 +++

error[E0477]: the type `&'b Nested<K>` does not fulfill the required lifetime
  --> $DIR/issue-65285-incorrect-explicit-lifetime-name-needed.rs:9:19
   |
LL |     fn foo<'b, L: X<&'b Nested<K>>>();
   |                   ^^^^^^^^^^^^^^^^
   |
note: type must satisfy the static lifetime as required by this binding
  --> $DIR/issue-65285-incorrect-explicit-lifetime-name-needed.rs:8:16
   |
LL | trait X<'a, K: 'a> {
   |                ^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0106, E0477, E0637.
For more information about an error, try `rustc --explain E0106`.
